<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDF7F4"
    android:padding="16dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/queueup_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/queueup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"
            android:text="QueueUp"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="45sp"
            android:layout_height="45sp"
            android:background="@drawable/circle_shape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/queueup_title"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.636"
            app:srcCompat="@drawable/ic_arrow_back" />

        <ImageButton
            android:id="@+id/saveButton"
            android:layout_width="55dp"
            android:layout_height="56dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="19dp"
            android:background="#FFEFEA"
            android:contentDescription="Checkmark"
            android:scaleType="center"
            android:src="@drawable/ic_check"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/queueup_title"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <RelativeLayout
        android:id="@+id/profileSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/queueup_title_layout">

        <FrameLayout
            android:id="@+id/profileImageFrame"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/circle_shape">

            <TextView
                android:id="@+id/profileInitialsTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Initials"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/profileImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:visibility="gone"
                android:contentDescription="Profile Picture" />
        </FrameLayout>

        <ImageButton
            android:id="@+id/editPicButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignEnd="@id/profileImageFrame"
            android:layout_alignBottom="@id/profileImageFrame"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/circle_shape"
            android:backgroundTint="#2196F3"
            android:contentDescription="Edit Profile Icon"
            android:src="@drawable/plus" />

        <ImageButton
            android:id="@+id/removePicButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignStart="@id/profileImageFrame"
            android:layout_alignBottom="@id/profileImageFrame"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/circle_shape"
            android:backgroundTint="#F44336"
            android:contentDescription="Remove Profile Icon"
            android:src="@drawable/minus" />


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/userInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_below="@id/profileSection">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/editFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="First Name"
                android:maxLength="50"
                android:gravity="center"
                android:inputType="textPersonName"
                android:fontFamily="@font/poppins" />

            <ImageView
                android:id="@+id/editFirstNameIcon"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/pen"
                android:background="#FFEFEA"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/editLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Last Name"
                android:maxLength="50"
                android:gravity="center"
                android:inputType="textPersonName"
                android:fontFamily="@font/poppins" />

            <ImageView
                android:id="@+id/editLastNameIcon"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/pen"
                android:background="#FFEFEA"

                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/editUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username"
                android:gravity="center"
                android:inputType="text"
                android:maxLength="50"
                android:fontFamily="@font/poppins" />

            <ImageView
                android:id="@+id/editUsernameIcon"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/pen"
                android:background="#FFEFEA"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:gravity="center"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/poppins"
                android:maxLength="50"/>

            <ImageView
                android:id="@+id/editEmailIcon"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/pen"
                android:background="#FFEFEA"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Phone Number"
                android:gravity="center"
                android:inputType="phone"
                android:maxLength="10"
                android:fontFamily="@font/poppins" />

            <ImageView
                android:id="@+id/editPhoneIcon"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/pen"
                android:background="#FFEFEA"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/notificationSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userInfo"
        android:background="@drawable/thinner_outlined_round_box"
        android:padding="16dp"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/notifTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Notification Settings"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_bold"
            android:textColor="#8C7466"
            android:layout_centerHorizontal="true" />

        <Switch
            android:id="@+id/notifSelectedSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/notifTitle"
            android:layout_marginTop="12dp"
            android:layout_alignParentStart="true"
            android:text="I want to be notified when chosen from waiting list"
            android:fontFamily="@font/poppins"
            android:textColor="#333333"
            android:thumbTint="@color/brown"
            android:trackTint="@color/backgroundColor"/>

        <Switch
            android:id="@+id/notifNotSelectedSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/notifSelectedSwitch"
            android:layout_marginTop="12dp"
            android:layout_alignParentStart="true"
            android:text="I want to be notified when not chosen from waiting list"
            android:fontFamily="@font/poppins"
            android:textColor="#333333"
            android:thumbTint="@color/brown"
            android:trackTint="@color/backgroundColor"/>

        <Switch
            android:id="@+id/notifAllSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/notifNotSelectedSwitch"
            android:layout_marginTop="12dp"
            android:layout_alignParentStart="true"
            android:text="I want to receive other notifications from QueueUp"
            android:fontFamily="@font/poppins"
            android:textColor="#333333"
            android:thumbTint="@color/brown"
            android:trackTint="@color/backgroundColor" />
    </RelativeLayout>

</RelativeLayout>