<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.bottomnavigation.BottomNavigationView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_navigation"
    android:layout_width="350dp"
    android:layout_height="60dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="16dp"
    android:background="@drawable/navigation_bar_bg"
    android:elevation="8dp"
    app:itemIconSize="30dp"
    app:itemActiveIndicatorStyle="@style/BottomNavigationView.ActiveIndicator"
    app:itemIconTint="@color/white"
    app:labelVisibilityMode="unlabeled"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:menu="@menu/admin_bottom_nav_menu"/>