...
        android:textColor="@android:color/black"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:padding="16dp"
        app:cornerRadius="24dp"
        app:backgroundTint="@color/light_beige"
        app:layout_constraintBottom_toTopOf="@id/attendeeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/attendeeButton"
        android:layout_width="0dp"
...
